# vmm_manager_ansible_collection

./: .gitignore  LICENSE  README.md  galaxy.yml  pyproject.toml  test_inventory.yaml  test_vmm_manager.yaml
.github/workflows/: integration.yml  main.yml  release.yml
meta/: runtime.yml
plugins/inventory/: vmm_manager.py
