[tool.poetry]
name = "vmm_manager_ansible_collection"
version = "0.0.5"
description = "Ansible Collection to support vmm_manager application on Ansible codes."
authors = ["Estevão Costa <ecosta@mpes.mp.br>"]

license = "MIT"
readme = "README.md"

homepage = "https://github.com/MP-ES/vmm_manager_ansible_collection"
repository = "https://github.com/MP-ES/vmm_manager_ansible_collection"
documentation = "https://github.com/MP-ES/vmm_manager_ansible_collection"

keywords = ["IaC", "scvmm", "vmm_manager", "vmm_manager_ansible_collection"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5"
vmm-manager = "^0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12"
pylint-quotes = "^0.2"
autopep8 = "^1.6"
rope = "^0.22"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
