[tool.poetry]
name = "vmm_manager_ansible_collection"
version = "1.0.1"
description = "Ansible Collection to support vmm_manager application on Ansible codes."
authors = ["Estevão Costa <ecosta@mpes.mp.br>"]

license = "MIT"
readme = "README.md"

homepage = "https://github.com/MP-ES/vmm_manager_ansible_collection"
repository = "https://github.com/MP-ES/vmm_manager_ansible_collection"
documentation = "https://github.com/MP-ES/vmm_manager_ansible_collection"

keywords = ["IaC", "scvmm", "vmm_manager", "vmm_manager_ansible_collection"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8|^9"
vmm-manager = "^1"

[tool.poetry.dev-dependencies]
autopep8 = "^2"
flake8 = "^6"
flake8-quotes = "^3"
isort = "^5"
rope = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
